# imgbed

./: .dockerignore  .gitignore  Dockerfile  compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  main.py  storage.py  worker.py
app/templates/: index.html
tests/: conftest.py  test_upload.py
